--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    package="net.tiramisu.mdp">
 
     <!-- Allow network access for Firebase / network calls -->
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
+        android:theme="@style/Theme.ExpenseManager">
         <activity
             android:name=".MainActivity"
             android:exported="true">
@@ -32,6 +32,24 @@
         <activity
             android:name=".LoginActivity"
             android:exported="true" />
+
+        <!-- Added missing activities so runtime intents don't fail -->
+        <activity
+            android:name=".ForgetPasswordActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".AddTransactionActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".ViewOneMonthActivity"
+            android:exported="false" />
+
+        <activity
+            android:name=".ViewDetailsActivity"
+            android:exported="false" />
+
     </application>
 
 </manifest>
