--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,15 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
+        encoding = 'UTF-8'
+    }
+
+    android.applicationVariants.all { variant ->
+        variant.outputs.all {
+            assembleProvider.get().doFirst {
+                println("Building with UTF-8 encoding")
+            }
+        }
     }
 }
 
