--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,11 @@
     <!-- Allow network access for Firebase / network calls -->
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- Notification permissions -->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
+    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM" />
+    <uses-permission android:name="android.permission.USE_EXACT_ALARM" />
+
     <application
         android:name=".MyApp"
         android:allowBackup="true"
@@ -47,9 +52,13 @@
             android:exported="false" />
 
         <activity
-            android:name=".ViewDetailsActivity"
-            android:exported="false" />
+            android:name=".ViewDetailsActivity" />
 
+        <!-- Broadcast Receiver for daily reminders -->
+        <receiver
+            android:name=".DailyReminderReceiver"
+            android:enabled="true"
+            android:exported="false" />
         <activity
             android:name=".SettingsActivity"
             android:exported="false" />
